@@ -1,8 +1,8 @@
 package com.jere.forum.model;
 
-
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
@@ -13,14 +13,16 @@ import javax.persistence.Id;
 import javax.persistence.JoinColumn;
 import javax.persistence.ManyToOne;
 import javax.persistence.Table;
+
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
 
 @SuppressWarnings("serial")
 @Getter
@@ -32,58 +34,58 @@ import org.springframework.security.core.userdetails.UserDetails;
 @Table(name = "USERS")
 public class UserEntity implements UserDetails {
 
-  @Id
-  @GeneratedValue(strategy = GenerationType.IDENTITY)
-  @Column(name = "USER_ID")
-  private Long id;
+	@Id
+	@GeneratedValue(strategy = GenerationType.IDENTITY)
+	@Column(name = "USER_ID")
+	private Long id;
 
-  @Column(nullable = false)
-  private String firstName;
+	@Column(nullable = false)
+	private String firstName;
 
-  @Column(nullable = false)
-  private String lastName;
+	@Column(nullable = false)
+	private String lastName;
 
-  @Column(nullable = false, unique = true)
-  private String email;
+	@Column(nullable = false, unique = true)
+	private String email;
 
-  @Column(nullable = false)
-  private String password;
+	@Column(nullable = false)
+	private String password;
 
-  @ManyToOne(cascade = CascadeType.MERGE, fetch = FetchType.LAZY)
-  @JoinColumn(name = "ROLE_ID")
-  private RoleEntity role;
+	@ManyToOne(cascade = CascadeType.MERGE, fetch = FetchType.LAZY)
+	@JoinColumn(name = "ROLE_ID")
+	private RoleEntity role;
 
-  @Column(name = "SOFT_DELETED")
-  private Boolean softDeleted;
+	@Column(name = "SOFT_DELETED")
+	private Boolean softDeleted;
 
-  @Override
-  public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of(new SimpleGrantedAuthority(role.getName()));
-  }
+	@Override
+	public Collection<? extends GrantedAuthority> getAuthorities() {
+		return Arrays.asList(new SimpleGrantedAuthority(role.getName()));
+	}
 
-  @Override
-  public String getUsername() {
-    return email;
-  }
+	@Override
+	public String getUsername() {
+		return email;
+	}
 
-  @Override
-  public boolean isAccountNonExpired() {
-    return true;
-  }
+	@Override
+	public boolean isAccountNonExpired() {
+		return true;
+	}
 
-  @Override
-  public boolean isAccountNonLocked() {
-    return true;
-  }
+	@Override
+	public boolean isAccountNonLocked() {
+		return true;
+	}
 
-  @Override
-  public boolean isCredentialsNonExpired() {
-    return true;
-  }
+	@Override
+	public boolean isCredentialsNonExpired() {
+		return true;
+	}
 
-  @Override
-  public boolean isEnabled() {
-    return !this.softDeleted;
-  }
+	@Override
+	public boolean isEnabled() {
+		return !this.softDeleted;
+	}
 
 }
